# expert-council

./: .gitignore  README.md  expert_council.py  main.py  pyproject.toml
councils/: 2026-03-10_100838_how-should-an-ai-driven-autoresearch-loo.md  2026-03-10_101006_how-should-an-ai-driven-autoresearch-loo.md
