[project]
name = "expert-council"
version = "0.1.0"
description = "Multi-LLM expert council: parallel opinions → anonymous peer review → synthesis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "openai>=2.26.0",
    "google-generativeai>=0.8.0",
]

[project.scripts]
expert-council = "expert_council:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
